--- a/tools/simulator/mainbar.ui
+++ b/tools/simulator/mainbar.ui
@@ -133,7 +133,7 @@
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="2">
-      <widget class="QPushButton" name="main_yellow_robot">
+      <widget class="QPushButton" name="main_right_robot">
        <property name="text">
         <string>Main</string>
        </property>
@@ -149,7 +149,7 @@
       </widget>
      </item>
      <item row="0" column="0">
-      <widget class="QPushButton" name="main_red_robot">
+      <widget class="QPushButton" name="main_left_robot">
        <property name="text">
         <string>Main</string>
        </property>
@@ -165,7 +165,7 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QPushButton" name="secondary_red_robot">
+      <widget class="QPushButton" name="secondary_left_robot">
        <property name="text">
         <string>Sec.</string>
        </property>
@@ -181,7 +181,7 @@
       </widget>
      </item>
      <item row="1" column="2">
-      <widget class="QPushButton" name="secondary_yellow_robot">
+      <widget class="QPushButton" name="secondary_right_robot">
        <property name="text">
         <string>Sec.</string>
        </property>
@@ -230,10 +230,10 @@
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Opponent detection:&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;Q&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;': Yellow - Main&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;W&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;': Yellow - Secondary&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;S&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;': Red - Main&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;X&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;' Red - Secondary&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;Q&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;': Right - Main&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;W&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;': Right - Secondary&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;S&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;': Left - Main&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;'&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;X&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;' Left - Secondary&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;key&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;: short distance&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;Shift+key&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;: long distance&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
